Remove overflow hidden in reset.scss. I prevented the Docs addon pages from scrolling.

--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -20,7 +20,6 @@ body {
   width: 100%;
   height: 100%;
   position: absolute;
-  overflow: hidden;
 
   > #react-root {
     width: 100%;
